--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "build": "tsc && rm -rf ./dist/views && cp -rp ./views ./dist",
+    "start": "node ./dist/bin/www.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -12,5 +13,10 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.1",
+    "@types/node": "^12.12.3",
+    "typescript": "^3.6.4"
   }
 }
