--- a/package.json
+++ b/package.json
@@ -4,19 +4,17 @@
   "private": true,
   "scripts": {
     "build": "tsc && rm -rf ./dist/views && cp -rp ./views ./dist",
-    "start": "node ./dist/bin/www.js"
+    "start": "npm run build && node ./dist/bin/www.js"
   },
   "dependencies": {
+    "@types/express": "^4.17.1",
+    "@types/node": "^12.12.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.1",
-    "@types/node": "^12.12.3",
+    "morgan": "~1.9.1",
     "typescript": "^3.6.4"
   }
 }
